:sparkles: feat: getall monitors route
